squish fix

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -314,6 +314,9 @@ input::placeholder {
 
 
 .posts {
+    .avatar {
+        margin: 14px 0px;
+    }
     padding: 0;
     margin: 40px;
     ul {
